--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,4 +1,5 @@
-svnLocation=rice/tags/rice-release-1-0-3-1-tag
+svnLocation=rice/branches/rice-release-1-0-3-2-br
+svnRevision=16577
 deployURL=test.kc.kuali.org:/opt/kc/release/webapps/kr-release.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
