--- a/impex/pom.xml
+++ b/impex/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
-    <artifactId>kuali-extras</artifactId>
-    <version>2</version>
+    <artifactId>kuali-common</artifactId>
+    <version>13</version>
   </parent>
   <groupId>org.kuali.db.impex</groupId>
   <artifactId>impex</artifactId>
