--- a/kuali-spring-util/src/test/resources/org/kuali/spring/util/test.properties
+++ b/kuali-spring-util/src/test/resources/org/kuali/spring/util/test.properties
@@ -6,3 +6,5 @@ panther.prey=rabbit
 panther.actions=Hunt ${${cat}.prey} at night and return with ${${cat}.prey} to my lair  
 
 lion.prey=buffalo
+
+name=Jessica
