--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/rice-release-1-0-3-2-m1
+svnLocation=rice/tags/rice-1.0.3.2-m1
 deployURL=test.kc.kuali.org:/opt/kc/release/webapps/kr-release.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
