--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.kuali.db.ojb</groupId>
   <artifactId>db-ojb</artifactId>
-  <version>1.0.4-patch7</version>
+  <version>1.0.4-patch8-SNAPSHOT</version>
   <name>ObJectRelationalBridge</name>
   <description>
     ObJectRelationalBridge (OJB) is an Object/Relational mapping tool that
@@ -28,9 +28,9 @@
     </repository>
   </repositories>
   <scm>
-    <connection>scm:svn:https://test.kuali.org/svn/kul-ojb-1.0.4/tags/db-ojb-1.0.4-patch7</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/kul-ojb-1.0.4/tags/db-ojb-1.0.4-patch7</developerConnection>
-    <url>https://test.kuali.org/svn/kul-ojb-1.0.4/tags/db-ojb-1.0.4-patch7</url>
+    <connection>scm:svn:https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</connection>
+    <developerConnection>scm:svn:https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</developerConnection>
+    <url>https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</url>
   </scm>
   <properties>
     <!-- Remove this property as soon as the devs are comfortable with Maven 3 -->
