--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,5 +1,5 @@
-svnLocation=rice/branches/rice-release-1-0-3-2-br
-svnRevision=20704
+svnLocation=rice/tags/rice-1.0.3.2-m4
+svnRevision=20973
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
