--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,7 +10,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
@@ -53,6 +54,12 @@
     <!-- Declared as properties so they can be shared between the compiler and javadoc plugins -->
     <kuali.compile.source>1.6</kuali.compile.source>
     <kuali.compile.target>1.6</kuali.compile.target>
+
+    <!-- 
+      Declared here as a property because version inheritance is not working correctly with the 
+      configuration for the 3.0-beta-4 version of the site plugin
+     -->
+    <kuali.javadoc.plugin.version>2.8</kuali.javadoc.plugin.version>
 
     <!-- This profile provides basic quality control for official Kuali artifacts (GPG signature, attached sources/javadocs etc.)-->
     <kuali.release.profiles>kuali-release</kuali.release.profiles>
@@ -233,7 +240,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.7</version>
+          <version>${kuali.javadoc.plugin.version}</version>
           <configuration>
             <encoding>${project.build.sourceEncoding}</encoding>
             <source>${kuali.compile.source}</source>
