--- a/exec-maven-plugin/pom.xml
+++ b/exec-maven-plugin/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -9,16 +8,16 @@
 
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>exec-maven-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Exec Maven Plugin</name>
   <description>A plugin to allow execution of system and Java programs</description>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/exec-maven-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/exec-maven-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/exec-maven-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/exec-maven-plugin-1.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/exec-maven-plugin-1.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/exec-maven-plugin-1.0</url>
   </scm>
 
   <dependencies>
