--- a/exec-maven-plugin/pom.xml
+++ b/exec-maven-plugin/pom.xml
@@ -8,16 +8,16 @@
 
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>exec-maven-plugin</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>Exec Maven Plugin</name>
   <description>A plugin to allow execution of system and Java programs</description>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/exec-maven-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/exec-maven-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/exec-maven-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/exec-maven-plugin-1.1</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/exec-maven-plugin-1.1</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/exec-maven-plugin-1.1</url>
   </scm>
 
   <dependencies>
