--- a/maven-http-plugin/pom.xml
+++ b/maven-http-plugin/pom.xml
@@ -12,7 +12,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven HTTP Plugin</name>
-  <description>Allows interacting with the HTTP protocol from Maven</description>
+  <description>Tools for allowing Maven to interact with the HTTP protocol</description>
   <properties>
     <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
   </properties>
