--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -14,7 +14,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
-  <version>103-SNAPSHOT</version>
+  <version>103</version>
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
@@ -149,9 +149,9 @@
     </snapshotRepository>
   </distributionManagement>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/parent</url>
+    <connection>scm:svn:https://test.kuali.org/svn/rice/tags/kuali-103</connection>
+    <developerConnection>scm:svn:https://test.kuali.org/svn/rice/tags/kuali-103</developerConnection>
+    <url>https://test.kuali.org/svn/rice/tags/kuali-103</url>
   </scm>
   <build>
     <extensions>
