--- a/sql-maven-plugin/pom.xml
+++ b/sql-maven-plugin/pom.xml
@@ -15,12 +15,6 @@
   <prerequisites>
     <maven>${mavenVersion}</maven>
   </prerequisites>
-  <issueManagement>
-    <system>JIRA</system>
-    <url>http://jira.codehaus.org/browse/MSQL</url>
-  </issueManagement>
-
-
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/sql-maven-plugin</connection>
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/sql-maven-plugin</developerConnection>
@@ -74,20 +68,12 @@
     </developer>
   </developers>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.4</source>
-          <target>1.4</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>3.0.5.RELEASE</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -192,5 +178,7 @@
 
   <properties>
     <mavenVersion>2.0.6</mavenVersion>
+    <kuali.compile.source>1.5</kuali.compile.source>
+    <kuali.compile.target>1.5</kuali.compile.target>
   </properties>
 </project>
