--- a/sql-maven-plugin/pom.xml
+++ b/sql-maven-plugin/pom.xml
@@ -75,6 +75,11 @@
       <version>3.0.5.RELEASE</version>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
