--- a/common/pom.xml
+++ b/common/pom.xml
@@ -42,31 +42,18 @@
     <kuali.cobertura.instrumentation.ignore>DO_NOT_MATCH_ANYTHING_PATTERN</kuali.cobertura.instrumentation.ignore>
     <kuali.cobertura.instrumentation.exclude>DO_NOT_MATCH_ANYTHING_PATTERN</kuali.cobertura.instrumentation.exclude>
 
-    <!-- javadoc, jxr, pmd, and taglist plugins all have an aggregate option -->
+    <!-- The jxr, pmd, and taglist plugins all have an aggregate option -->
     <kuali.reporting.aggregate>true</kuali.reporting.aggregate>
 
     <!-- Default JavaDoc config -->
     <kuali.javadoc.quiet>true</kuali.javadoc.quiet>
-    <kuali.javadoc.show>private</kuali.javadoc.show>
-    <kuali.javadoc.tool.version />
+    <kuali.javadoc.show>protected</kuali.javadoc.show>
     <kuali.javadoc.linksource>true</kuali.javadoc.linksource>
-    <kuali.javadoc.exclude.package.names />
     <kuali.javadoc.maxmemory>512m</kuali.javadoc.maxmemory>
-    <!-- Uncomment this to troubleshoot heap issues when generating javadoc -->
-    <!-- <kuali.javadoc.additional.joption>-J-XX:MaxPermSize=256m -J-verbose:gc -J-XX:+PrintGCDetails -J-XX:+PrintGCDateStamps
-      -J-XX:+PrintHeapAtGC -J-XX:+PrintTenuringDistribution -J-Xloggc:${project.build.directory}/javadoc-heap.log</kuali.javadoc.additional.joption> -->
-    <!-- Setting this to true will generate javadoc.sh in target/site/apidocs. This allows you to see the exact javadoc command
-      being issued during the build -->
     <kuali.javadoc.debug>false</kuali.javadoc.debug>
-    <!-- These 2 should be "aggregate" and "test-aggregate", but with the latest version of the relevant tools (Maven 3.0.1,
-      maven-site-plugin 3.0-beta-3 and
-      maven-javadoc-plugin 2.7), those 2 reports cause a heap error regardless of how large the heap is set. I set the overall
-      heap to 4 gb's with a MaxPermGen
-      of 512m before switching back to "javadoc" and "test-javadoc" -->
-    <kuali.javadoc.report.1>javadoc</kuali.javadoc.report.1>
-    <kuali.javadoc.report.2>test-javadoc</kuali.javadoc.report.2>
-    <!-- Once the heap issue with aggregate and test-aggregate is worked out, set this to false -->
-    <kuali.javadoc.aggregate>${kuali.reporting.aggregate}</kuali.javadoc.aggregate>
+    <kuali.javadoc.report.1>aggregate</kuali.javadoc.report.1>
+    <kuali.javadoc.report.2>test-aggregate</kuali.javadoc.report.2>
+    <kuali.javadoc.aggregate>false</kuali.javadoc.aggregate>
 
     <!-- Placeholders for javadoc link locations. Override these in child poms as needed -->
     <kuali.javadoc.link.1>http://download.oracle.com/javase/6/docs/api/</kuali.javadoc.link.1>
@@ -105,6 +92,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.kuali.maven.plugins</groupId>
+          <artifactId>maven-eclipse-formatter-plugin</artifactId>
+          <version>1.0</version>
+        </plugin>
+        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
           <version>2.4</version>
@@ -118,6 +110,16 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>2.6</version>
+          <configuration>
+            <configLocation>org/kuali/cm/checkstyle/kuali-sun.xml</configLocation>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.kuali.cm</groupId>
+              <artifactId>cm-tools</artifactId>
+              <version>1.3-SNAPSHOT</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>com.atlassian.maven.plugins</groupId>
@@ -176,6 +178,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
           <version>2.5</version>
+          <configuration>
+            <targetJdk>${kuali.compile.source}</targetJdk>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -272,6 +277,13 @@
                   <aggregate>${kuali.reporting.aggregate}</aggregate>
                 </configuration>
               </plugin>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                  <configLocation>org/kuali/cm/checkstyle/kuali-sun.xml</configLocation>
+                </configuration>
+              </plugin>
               <!-- Included here as a default only until Maven 3.1 is out which will support 'mixins'.
                 This plugin only generates output if the project is a maven plugin.
                 For projects that are not maven plugins it does nothing. -->
@@ -318,6 +330,13 @@
               </plugin>
             </reportPlugins>
           </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.kuali.cm</groupId>
+              <artifactId>cm-tools</artifactId>
+              <version>1.3-SNAPSHOT</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -327,6 +346,23 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>pre-site</id>
+            <phase>pre-site</phase>
+            <goals>
+              <goal>jxr</goal>
+              <goal>test-jxr</goal>
+            </goals>
+            <configuration>
+              <aggregate>false</aggregate>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>com.atlassian.maven.plugins</groupId>
         <artifactId>maven-clover2-plugin</artifactId>
