--- a/maven-checkstyle-plugin/pom.xml
+++ b/maven-checkstyle-plugin/pom.xml
@@ -19,8 +19,7 @@
   under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -31,7 +30,7 @@
 
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-checkstyle-plugin</artifactId>
-  <version>2.6.1-SNAPSHOT</version>
+  <version>2.6.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>Maven Checkstyle Plugin</name>
@@ -50,9 +49,9 @@
   </prerequisites>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-checkstyle-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-checkstyle-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-checkstyle-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-checkstyle-plugin-2.6.1</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-checkstyle-plugin-2.6.1</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-checkstyle-plugin-2.6.1</url>
   </scm>
   <issueManagement>
     <system>JIRA</system>
