--- a/maven-checkstyle-plugin/pom.xml
+++ b/maven-checkstyle-plugin/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-checkstyle-plugin</artifactId>
-  <version>2.6.1</version>
+  <version>2.6.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Maven Checkstyle Plugin</name>
@@ -49,9 +49,9 @@
   </prerequisites>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-checkstyle-plugin-2.6.1</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-checkstyle-plugin-2.6.1</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-checkstyle-plugin-2.6.1</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-checkstyle-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-checkstyle-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-checkstyle-plugin</url>
   </scm>
   <issueManagement>
     <system>JIRA</system>
